hphp/test/zend/good/ext-intl/bug60192-getsortkey.php
<?php

class Collator2 extends Collator{
	public function __construct() {
		// ommitting parent::__construct($someLocale);
	}
}

$c = new Collator2();
$c->getSortKey('h');